contato, reservas e redefinicao do menu

--- a/projeto_parte1/registration.html
+++ b/projeto_parte1/registration.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="css/main.css"></link>
 		<script src="js/jquery-2.1.3.js"></script>
 		<script src="js/validation.js"></script>	
+		<script src="js/layout_adjusts.js"></script>	
 		<script src="js/general_events_handler.js"></script>	
 
 		<script>
@@ -25,13 +26,7 @@
 	</head>
 
 	<body id="register_body">
-		<nav class="nav_container barfont">
-			<ul class="menu">
-				<li> <a href="home.html">Singapore Hotel</a></li>
-				<li> <a href="#">Pacotes</a></li>
-				<li> <a href="#">Promoções</a></li>
-			</ul>	
-		</nav>
+		<nav class="nav_container barfont"> </nav>
 
 		<!-- 
 		<div id="banner" role="banner">
@@ -41,7 +36,7 @@
 
 		<!-- <aside class="leftaside"> <p>Placeholder</p></aside> -->
 
-		<div class="registerclass color_font_pattern">
+		<div class="formclass color_font_pattern">
 			<h3>Cadastro</h3> 
 
 			<form id="registerform" method="">
@@ -49,7 +44,7 @@
 					<legend>Informações Pessoais </legend>
 					<div id="nome">
 						<label> Nome completo </label> 
-						<input type="text" name="name" id="tfnome">
+						<input type="text" name="name" id="tfnomecompleto">
 						<div id="infonome" class="error_msg"></div>
 					</div>
 	
