--- a/projeto_parte1/home.html
+++ b/projeto_parte1/home.html
@@ -9,6 +9,7 @@
 		<script src="js/jquery-2.1.3.js"></script>
 		<script src="js/general_events_handler.js"></script>	
 		<script src="js/validation.js"></script>
+		<script src="js/layout_adjusts.js"></script>	
 
 		<script>
 			/* Utilizei script interno pois cada página terá um background diferente. Se fosse inserir tudo num CSS externo o mesmo ficaria excessivamente grande, além de dificultar a manutenibilidade. */
@@ -25,12 +26,7 @@
 
 	<body id="home_body">
 	
-		<nav class="nav_container barfont">
-			<ul class="menu">
-				<li> <a href="#">Singapore Hotel</a></li>
-				<li> <a href="#">Pacotes</a></li>
-				<li> <a href="#">Promoções</a></li>
-			</ul>
+		<nav class="nav_container barfont" id="teste">
 			
 			<div class="login_container barfont">
 				<!-- <h3>Atenticação</h3>  -->
