VALIDACAO CPF, NOME, EMAIL - CORRECOES
- Checagem de CPF aparentemente funcionando. Funciona quando o usuario
digita com/ sem caracteres nao-numéricos;
- implementacao das validacoes dentro do evento blur do JQuery.

--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -71,10 +71,10 @@
 
 				<fieldset>
 					<legend> Mensagem </legend>
-					<textarea rows="10" cols="80"></textarea>
+					<textarea name="msg" rows="10"></textarea>
 				</fieldset>
 
-				<input type="button" class="btnpattern" id="enviarbtn" value="Enviar">
+				<input type="submit" class="btnpattern" id="enviarbtn" value="Enviar">
 				<input type="reset" class="btnpattern" id="cancelarbtn" value="Cancelar">
 			</form>
 		</div>
