--- a/projeto_parte1/bookings.html
+++ b/projeto_parte1/bookings.html
@@ -47,7 +47,7 @@
 				</fieldset>
 
 				<fieldset>
-					<legend> Informações sobre os hospedes </legend>
+					<legend> Informações sobre os hóspedes </legend>
 					<div>
 						<label> Quantidade de adultos </label>
 						<select name="qtdeadultos">
