--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -52,7 +52,7 @@
 					</div>
 				</fieldset>
 
-				<fieldset id="comonosconheceu">
+				<fieldset id="como">
 					<legend> Como você nos conheceu? </legend>
 					<label for="jornais">Jornais</label>
 					<input type="checkbox" id="jornais" name="comonosconheceu" value="Jornais"> 
