efetua login com sucesso. bug arrumado

--- a/projeto_parte1/registration.html
+++ b/projeto_parte1/registration.html
@@ -85,7 +85,7 @@
 					<legend>Endereço </legend>
 					<div id="cidade">
 						<label> Cidade </label> 
-						<input type="text" name="cidade" id="cidade">
+						<input type="text" name="cidade" id="user_city">
 						<div id="infocidade" class="error_msg"></div>
 					</div>
 
@@ -126,7 +126,7 @@
 
 					<div id="cep">
 						<label> CEP </label> 
-						<input type="text" name="cep">
+						<input type="text" name="cep" id="user_zipcode">
 						<div id="infocep" class="error_msg"></div>
 					</div>
 				</fieldset>
@@ -134,13 +134,13 @@
 					<legend>Credenciais </legend>
 					<div id="email">
 						<label> Email </label> 
-						<input type="email" name="email">
+						<input type="email" name="email" id="user_email">
 						<div id="infoemail" class="error_msg"></div>
 					</div>
 
 					<div id="senha">
 						<label> Senha </label> 
-						<input type="password" name="senha">
+						<input type="password" name="senha" id="user_password">
 						<div id="infosenha" class="error_msg"></div>
 					</div>
 
