--- a/projeto_parte1/home.html
+++ b/projeto_parte1/home.html
@@ -24,10 +24,8 @@
 
 	</head>
 
-
 	<body id="home_body">
-	
-		<nav class="nav_container barfont" id="teste">
+		<nav class="nav_container barfont">
 			
 			<div class="login_container barfont">
 				<!-- <h3>Atenticação</h3>  -->
@@ -38,7 +36,6 @@
 					</div>					
 					<div id="password">
 						<label>Senha</label> <input type="password" name="password" class="tfpattern" id="tfpassword" required></input>
-						<div id="infopassword" class="error_msg"></div>
 					</div> 
  					<input type="submit" id="loginbtn" class="btnpattern" value="Login"></input>
 					<input type="button" id="registerbtn" class="btnpattern" value="Criar uma conta"></input>
