--- a/projeto_parte1/registration.html
+++ b/projeto_parte1/registration.html
@@ -11,8 +11,8 @@
 		<script src="js/validation.js"></script>	
 		<script src="js/layout_adjusts.js"></script>	
 		<script src="js/general_events_handler.js"></script>	
-		<script src="js/cadastro_controller.js"></script>
-		<script src="js/user_class.js"></script>
+		<!-- // <script src="js/cadastro_controller.js"></script> -->
+		<!-- // <script src="js/user_class.js"></script> -->
 		<script>
 			// Utilizei script interno pois cada página terá um background diferente. Se fosse inserir tudo num CSS externo o mesmo ficaria excessivamente grande.
 
@@ -28,14 +28,6 @@
 
 	<body id="register_body">
 		<nav class="nav_container barfont"> </nav>
-
-		<!-- 
-		<div id="banner" role="banner">
-			<img src="img/hotel.jpg" alt="Banner not found!">
-		</div> 
-		-->
-
-		<!-- <aside class="leftaside"> <p>Placeholder</p></aside> -->
 
 		<div class="formclass color_font_pattern">
 			<h3>Cadastro</h3> 
@@ -74,9 +66,9 @@
 						<label> Estado civil </label>
 						<select name="estadocivil" title="Selecione seu estado civil" id="marital_status">
 							<option value="unknown" selected=""> - </option>
-							<option value="solteiro"> Solteiro </option>
-							<option value="casado"> Casado </option>
-							<option value="divorciado"> Divorciado </option>
+							<option value="solteiro"> Solteiro(a) </option>
+							<option value="casado"> Casado(a) </option>
+							<option value="divorciado"> Divorciado(a) </option>
 							</select>
 						<div id="infoestadocivil" class="error_msg"></div>
 					</div>
