--- a/projeto_parte1/bookings.html
+++ b/projeto_parte1/bookings.html
@@ -8,8 +8,9 @@
 		<script src="js/jquery-2.1.3.js"></script>
 		<script src="js/general_events_handler.js"></script>	
 		<script src="js/validation.js"></script>
-		<script src="js/layout_adjusts.js"></script>	
-		
+		<script src="js/layout_adjusts.js"></script>
+		<script src="js/booking_class.js"></script>
+		<script src="js/booking_controller.js"></script>
 
 		<script>
 			/* Utilizei script interno pois cada página terá um background diferente. Se fosse inserir tudo num CSS externo o mesmo ficaria excessivamente grande, além de dificultar a manutenibilidade. */
@@ -50,7 +51,7 @@
 					<legend> Informações sobre os hóspedes </legend>
 					<div>
 						<label> Quantidade de adultos </label>
-						<select name="qtdeadultos">
+						<select name="qtdeadultos" id="numberOfAdults">
 							<option value="1">1</option>
 							<option value="2">2</option>
 							<option value="3">3</option>
@@ -60,7 +61,7 @@
 
 					<div>
 						<label> Quantidade de crianças até 3 anos </label>
-						<select name="qtdebebes">
+						<select name="qtdebebes" id="numberOfBabies">
 							<option value="0">0</option>
 							<option value="1">1</option>
 							<option value="2">2</option>
@@ -70,7 +71,7 @@
 
 					<div>
 						<label> Quantidade de crianças entre 4 e 12 anos </label>
-						<select name="qtdecriancas">
+						<select name="qtdecriancas" id="numberOfChildren">
 							<option value="0">0</option>
 							<option value="1">1</option>
 							<option value="2">2</option>
