--- a/projeto_parte1/home.html
+++ b/projeto_parte1/home.html
@@ -32,7 +32,7 @@
 				<form id="loginform" method="" action="http://www.google.com/search"> 
 					<div id="email"> 
 						<label>Email</label> <input type="email" name="email" class="tfpattern" id="tfemail" required autofocus></input>
-						<div id="infoEmail" class="error_msg"></div>
+						<div id="infoemail" class="error_msg"></div>
 					</div>					
 					<div id="password">
 						<label>Senha</label> <input type="password" name="password" class="tfpattern" id="tfpassword" required></input>
