--- a/projeto_parte1/registration.html
+++ b/projeto_parte1/registration.html
@@ -126,7 +126,7 @@
 					<legend>Credenciais </legend>
 					<div id="email">
 						<label> Email </label> 
-						<input type="email" name="email" id="user_email">
+						<input type="email" name="email" id="tfemail">
 						<div id="infoemail" class="error_msg"></div>
 					</div>
 
