--- a/projeto_parte1/registration.html
+++ b/projeto_parte1/registration.html
@@ -10,9 +10,10 @@
 		<script src="js/jquery-2.1.3.js"></script>
 		<script src="js/validation.js"></script>	
 		<script src="js/layout_adjusts.js"></script>	
-		<script src="js/general_events_handler.js"></script>	
-		<!-- // <script src="js/cadastro_controller.js"></script> -->
-		<!-- // <script src="js/user_class.js"></script> -->
+		<script src="js/general_events_handler.js"></script>
+		<!-- Observacao: para a correta realizacao do cadastro, eh necessario a inclusao dos seguintes sources. -->
+		<script src="js/cadastro_controller.js"></script>
+		<script src="js/user_class.js"></script>
 		<script>
 			// Utilizei script interno pois cada página terá um background diferente. Se fosse inserir tudo num CSS externo o mesmo ficaria excessivamente grande.
 
