--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -41,13 +41,13 @@
 	
 					<div id="email">
 						<label> Email </label> 
-						<input type="email" name="email">
+						<input type="email" name="email" id="user_mail">
 						<div id="infoemail" class="error_msg"></div>
 					</div>
 
 					<div id="celular">
 						<label> Telefone para contato </label> 
-						<input type="celular" name="celular">
+						<input type="celular" name="celular" id="user_phone">
 						<div id="infoemail" class="error_msg"></div>
 					</div>
 				</fieldset>
@@ -71,7 +71,7 @@
 
 				<fieldset>
 					<legend> Mensagem </legend>
-					<textarea name="msg" rows="10"></textarea>
+					<textarea name="msg" rows="10" id="messageFromUser"></textarea>
 				</fieldset>
 
 				<input type="submit" class="btnpattern" id="enviarbtn" value="Enviar">
