Modelo e Controlador de Contato. Fazer teste e comentar

--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -9,7 +9,8 @@
 		<script src="js/general_events_handler.js"></script>	
 		<script src="js/layout_adjusts.js"></script>	
 		<script src="js/validation.js"></script>
-
+		<script src="js/contact_class.js"></script>
+		<script src="js/contact_controller.js"></script>
 		<script>
 			/* Utilizei script interno pois cada página terá um background diferente. Se fosse inserir tudo num CSS externo o mesmo ficaria excessivamente grande, além de dificultar a manutenibilidade. */
 
