validacao senha e correcoes em validacao

--- a/projeto_parte1/bookings.html
+++ b/projeto_parte1/bookings.html
@@ -17,7 +17,7 @@
 
 			$(document).ready( function(){
 
-				document.getElementById("bookings_body").style.backgroundImage = "url(img/hotel.jpg)";
+				document.getElementById("bookings_body").style.backgroundImage = "url(img/hotel2.jpg)";
 			});
 
 		</script>
