--- a/projeto_parte1/home.html
+++ b/projeto_parte1/home.html
@@ -13,7 +13,7 @@
 		<script src="js/user_class.js"></script>
 		<script src="js/login_controller.js"></script>
 		<script>
-			/* Utilizei script interno pois cada página terá um background diferente. Se fosse inserir tudo num CSS externo o mesmo ficaria excessivamente grande, além de dificultar a manutenibilidade. */
+			/* Utilizei script interno pois cada página terá um background diferente. Se fosse inserir tudo num CSS externo o mesmo ficaria excessivamente grande, além de prejudicar a manutenibilidade. */
 
 			$(document).ready( function(){
 
@@ -28,7 +28,6 @@
 		<nav class="nav_container barfont">
 			
 			<div class="login_container barfont">
-				<!-- <h3>Atenticação</h3>  -->
 				<form id="loginform" method="" action="http://www.google.com/search"> 
 					<div id="email"> 
 						<label>Email</label> <input type="email" name="email" class="tfpattern" id="tfemail" required autofocus></input>
