--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -15,7 +15,7 @@
 
 			$(document).ready( function(){
 
-				document.getElementById("contact_body").style.backgroundImage = "url(img/hotel.jpg)";
+				document.getElementById("contact_body").style.backgroundImage = "url(img/hotel2.jpg)";
 			});
 
 		</script>
@@ -30,7 +30,7 @@
 		<div class="formclass color_font_pattern">
 			<h3> Contato </h3> 
 
-			<form id="contactform" method="">
+			<form id="formclass" method="">
 				<fieldset>
 					<legend>Informações Pessoais </legend>
 					<div id="nome">
