--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -42,7 +42,7 @@
 	
 					<div id="email">
 						<label> Email </label> 
-						<input type="email" name="email" id="user_mail">
+						<input type="email" name="email" id="tfemail">
 						<div id="infoemail" class="error_msg"></div>
 					</div>
 
