--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -48,7 +48,7 @@
 
 					<div id="celular">
 						<label> Telefone para contato </label> 
-						<input type="celular" name="celular" id="user_phone">
+						<input type="text" name="celular" id="user_phone" title="Formato: (XX)XXXXX-XX-XX" value="(XX)XXXXX-XX-XX">
 						<div id="infoemail" class="error_msg"></div>
 					</div>
 				</fieldset>
