--- a/projeto_parte1/home.html
+++ b/projeto_parte1/home.html
@@ -28,7 +28,7 @@
 		<nav class="nav_container barfont">
 			
 			<div class="login_container barfont">
-				<form id="loginform" method="" action="http://www.google.com/search"> 
+				<form id="loginform" method=""> 
 					<div id="email"> 
 						<label>Email</label> <input type="email" name="email" class="tfpattern" id="tfemail" required autofocus></input>
 						<div id="infoemail" class="error_msg"></div>
@@ -37,7 +37,7 @@
 						<label>Senha</label> <input type="password" name="password" class="tfpattern" id="tfpassword" required></input>
 					</div> 
  					<input type="submit" id="loginbtn" class="btnpattern" value="Login"></input>
-					<input type="button" id="registerbtn" class="btnpattern" value="Criar uma conta"></input>
+					<input type="button" id="registerbtn" class="btnpattern" value="Cadastrar-se"></input>
 				</form>
 			</div>
 		</nav>
