--- a/projeto_parte1/registration.html
+++ b/projeto_parte1/registration.html
@@ -150,10 +150,12 @@
 						<div id="infoconfsenha" class="error_msg"></div>
 					</div>
 				</fieldset>
-				<input type="button" class="btnpattern" id="cadastrarbtn" value="Cadastrar">
+				<input type="submit" class="btnpattern" id="cadastrarbtn" value="Cadastrar">
 				<input type="reset" class="btnpattern" id="cancelarbtn" value="Cancelar">
 			</form>
 		</div>
+	
+		
 	
 	</body>
 
