--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -31,7 +31,7 @@
 		<div class="formclass color_font_pattern">
 			<h3> Contato </h3> 
 
-			<form id="formclass" method="">
+			<form id="formclass" method="get">
 				<fieldset>
 					<legend>Informações Pessoais </legend>
 					<div id="nome">
@@ -48,8 +48,8 @@
 
 					<div id="celular">
 						<label> Telefone para contato </label> 
-						<input type="text" name="celular" id="user_phone" title="Formato: (XX)XXXXX-XX-XX" value="(XX)XXXXX-XX-XX">
-						<div id="infoemail" class="error_msg"></div>
+						<input type="text" name="celular" id="user_phone" title="Formato: (XX)XXXXX-XX-XX" placeholder="(XX)XXXXX-XX-XX">
+						<div id="infotelefone" class="error_msg blueText">Formato: (XX)XXXXX-XX-XX</div>
 					</div>
 				</fieldset>
 
@@ -73,15 +73,13 @@
 				<fieldset>
 					<legend> Mensagem </legend>
 					<textarea name="msg" rows="10" id="messageFromUser"></textarea>
+					<div id="infomsg" class="error_msg"></div>
 				</fieldset>
 
-				<input type="submit" class="btnpattern" id="enviarbtn" value="Enviar">
+				<input type="button" class="btnpattern" id="enviarbtn" value="Enviar">
 				<input type="reset" class="btnpattern" id="cancelarbtn" value="Cancelar">
 			</form>
 		</div>
 
-
-<!-- 		<footer></footer>
- -->
 	</body>
 </html>
