--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8">
-		<title>Contato</title>
+		<title>.: Contato</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<script src="js/jquery-2.1.3.js"></script>
 		<script src="js/general_events_handler.js"></script>	
