--- a/projeto_parte1/home.html
+++ b/projeto_parte1/home.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8">
-		<title>SReservas</title>
+		<title>.: Singapore Hotel</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/home.css">
 		<script src="js/jquery-2.1.3.js"></script>
