--- a/projeto_parte1/registration.html
+++ b/projeto_parte1/registration.html
@@ -5,7 +5,7 @@
 <html lang="pt-BR">
 	<head>
 		<meta charset="UTF-8">
-		<title>Cadastro</title>
+		<title>.: Cadastro</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css"></link>
 		<script src="js/jquery-2.1.3.js"></script>
 		<script src="js/validation.js"></script>	
