criacao trigger p/ contact

--- a/projeto_parte1/contact.html
+++ b/projeto_parte1/contact.html
@@ -31,7 +31,7 @@
 		<div class="formclass color_font_pattern">
 			<h3> Contato </h3> 
 
-			<form id="formclass" method="get">
+			<form id="contactform" method="get">
 				<fieldset>
 					<legend>Informações Pessoais </legend>
 					<div id="nome">
@@ -76,7 +76,7 @@
 					<div id="infomsg" class="error_msg"></div>
 				</fieldset>
 
-				<input type="button" class="btnpattern" id="enviarbtn" value="Enviar">
+				<input type="submit" class="btnpattern" id="enviarbtn" value="Enviar">
 				<input type="reset" class="btnpattern" id="cancelarbtn" value="Cancelar">
 			</form>
 		</div>
