--- a/projeto_parte1/home.html
+++ b/projeto_parte1/home.html
@@ -37,7 +37,7 @@
 						<label>Senha</label> <input type="password" name="password" class="tfpattern" id="tfpassword" required></input>
 					</div> 
  					<input type="submit" id="loginbtn" class="btnpattern" value="Login"></input>
-					<input type="submit" id="registerbtn" class="btnpattern" value="Cadastrar-se"></input>
+					<input type="button" id="registerbtn" class="btnpattern" value="Cadastrar-se"></input>
 				</form>
 			</div>
 		</nav>
