bookings trigger correcao

--- a/projeto_parte1/bookings.html
+++ b/projeto_parte1/bookings.html
@@ -16,8 +16,7 @@
 			/* Utilizei script interno pois cada página terá um background diferente. Se fosse inserir tudo num CSS externo o mesmo ficaria excessivamente grande, além de dificultar a manutenibilidade. */
 
 			$(document).ready( function(){
-
-				document.getElementById("bookings_body").style.backgroundImage = "url(img/hotel2.jpg)";
+				document.getElementById("bookings_body").style.backgroundImage = "url(img/campainha.jpg)";
 			});
 
 		</script>
